# ixset-typed

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  README.md  cabal.project  ixset-typed.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Data/IxSet/: Typed.hs
src/Data/IxSet/Typed/: Ix.hs
src/ixset-optics-lens/Data/IxSet/Typed/: Lens.hs
src/ixset-optics-optics/Data/IxSet/Typed/: Optics.hs
src/main/Data/IxSet/: Typed.hs
src/main/Data/IxSet/Typed/: Ix.hs
tests/: Example.hs  TestIxSetTyped.hs
tests/Data/IxSet/: Tests.hs
tests/Data/IxSet/Typed/: Tests.hs
