name:                ixset-typed
version:             0.1.4
synopsis:            Efficient relational queries on Haskell sets.
description:
    This Haskell package provides a data structure of sets that are indexed
    by potentially multiple indices.
    .
    Sets can be created, modified, and queried in various ways.
    .
    The package is a variant of the <https://hackage.haskell.org/package/ixset ixset>
    package. The ixset package makes use
    of run-time type information to find a suitable index on a query, resulting
    in possible run-time errors when no suitable index exists. In ixset-typed,
    the types of all indices available or tracked in the type system.
    Thus, ixset-typed should be safer to use than ixset, but in turn requires
    more GHC extensions.
    .
    At the moment, the two packages are relatively compatible. As a consequence
    of the more precise types, a few manual tweaks are necessary when switching
    from one to the other, but the interface is mostly the same.
license:             BSD3
author:              Andres Löh, Happstack team, HAppS LLC
maintainer:          Andres Löh <andres@well-typed.com>
category:            Data Structures
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:              git
  location:          https://github.com/kosmikus/ixset-typed.git

library
  build-depends:     base >= 4.6 && < 5,
                     syb >= 0.4 && < 1,
                     containers >= 0.5 && < 1,
                     safecopy >= 0.8 && < 1,
                     template-haskell >= 2.8 && < 3

  hs-source-dirs:    src
  exposed-modules:
                     Data.IxSet.Typed
                     Data.IxSet.Typed.Ix

  ghc-options:       -Wall -fno-warn-unused-do-bind
  ghc-prof-options:  -auto-all

  default-language:  Haskell2010
