cabal-version:       3.0

name:                ixset-typed
version:             0.4
synopsis:            Efficient relational queries on Haskell sets.
description:
    This Haskell package provides a data structure of sets that are indexed
    by potentially multiple indices.
    .
    Sets can be created, modified, and queried in various ways.
    .
    The package is a variant of the <https://hackage.haskell.org/package/ixset ixset>
    package. The ixset package makes use
    of run-time type information to find a suitable index on a query, resulting
    in possible run-time errors when no suitable index exists. In ixset-typed,
    the types of all indices available or tracked in the type system.
    Thus, ixset-typed should be safer to use than ixset, but in turn requires
    more GHC extensions.
    .
    At the moment, the two packages are relatively compatible. As a consequence
    of the more precise types, a few manual tweaks are necessary when switching
    from one to the other, but the interface is mostly the same.
license:             BSD-3-Clause
license-file:        COPYING
author:              Andres Löh, Happstack team, HAppS LLC
maintainer:          Andres Löh <andres@well-typed.com>
category:            Data Structures
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type:              git
  location:          https://github.com/well-typed/ixset-typed.git

library
  build-depends:     base             >= 4.9 && < 5,
                     containers       >= 0.5.11 && < 1,
                     deepseq          >= 1.3 && < 2,
                     safecopy         >= 0.8 && < 1,
                     exceptions       >= 0.4 && < 1

  hs-source-dirs:    src/main
  exposed-modules:
                     Data.IxSet.Typed

  other-modules:
                     Data.IxSet.Typed.Ix

  ghc-options:       -Wall -Wredundant-constraints

  default-language:  Haskell2010

test-suite test-ixset-typed
  type:              exitcode-stdio-1.0
  build-depends:     ixset-typed,
                     base             >= 4.9 && < 5,
                     containers       >= 0.5 && < 1,
                     HUnit,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck
  hs-source-dirs:    tests
  main-is:           TestIxSetTyped.hs
  other-modules:     Data.IxSet.Typed.Tests

  ghc-options:       -Wall

  default-language:  Haskell2010

library ixset-optics-lens
  visibility:        public
  build-depends:     base             >= 4.9 && < 5,
                     containers       >= 0.5 && < 1,
                     lens >= 4.18,
                     ixset-typed

  hs-source-dirs:    src/ixset-optics-lens
  exposed-modules:   Data.IxSet.Typed.Lens

  ghc-options:       -Wall -Wredundant-constraints

  default-language:  Haskell2010

library ixset-optics-optics
  visibility:        public
  build-depends:     base             >= 4.9 && < 5,
                     containers       >= 0.5 && < 1,
                     optics >= 0.2,
                     ixset-typed

  hs-source-dirs:    src/ixset-optics-optics
  exposed-modules:   Data.IxSet.Typed.Optics

  ghc-options:       -Wall -Wredundant-constraints

  default-language:  Haskell2010